--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <footer>
       <p>
         This project was coded by
-        <a href="#" target="_blank">Lyvia Alam</a> and is
-        <a href="#" target="_blank"> on GitHub</a> and
-        <a href="#" target="_blank">hosted on Netlify</a>
+        <a href="https://github.com/LyviaAlam" target="_blank">Lyvia Alam</a> and is
+        <a href="https://github.com/LyviaAlam/WeatherApp" target="_blank"> on GitHub</a> and
+        <a href="https://glittering-gingersnap-6e3517.netlify.app/" target="_blank">hosted on Netlify</a>
       </p>
     </footer>
   </body>
